Retina Resolution Overflows Fixed Project back to original shape

--- a/src/components/contact.scss
+++ b/src/components/contact.scss
@@ -3,6 +3,9 @@
     height: 40vh;
     position: relative;
     background: #7510F7;
+    @media (max-height: 700px) {
+        height: 55vh;
+    }
     .contact-content{
         position: absolute;
         left: 50%;
