--- a/src/components/experience.scss
+++ b/src/components/experience.scss
@@ -51,6 +51,7 @@
             background-size: 60px;
             background-repeat: no-repeat;
             min-height: 60px;
+            width: 90%;
             h4,h5{
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 margin: 5px 0;
